no need to endorse the jvm cause of @Resource
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1610183 13f79535-47bb-0310-9956-ffa450edef68